--- a/DESKTOPV2/admin/notificacoes.html
+++ b/DESKTOPV2/admin/notificacoes.html
@@ -19,9 +19,20 @@
             </div>
             <div class="header-controls">
                 <a href="dashboard.html" class="btn-secondary"><i class="fas fa-arrow-left"></i> Voltar</a>
-                <button onclick="openNotificationModal()" class="btn-primary"><i class="fas fa-plus"></i> Nova Notificação</button>
+                <button onclick="openNotificationModal()" class="btn-primary" disabled title="Recurso em desenvolvimento"><i class="fas fa-plus"></i> Nova Notificação</button>
             </div>
         </header>
+
+        <!-- Alert Box -->
+        <div style="background: #FEF3C7; border-left: 4px solid #F59E0B; padding: 20px; border-radius: 8px; margin-bottom: 20px;">
+            <div style="display: flex; gap: 15px;">
+                <div style="font-size: 24px; color: #F59E0B;">⚠️</div>
+                <div>
+                    <h3 style="margin: 0 0 8px 0; color: #92400E; font-weight: 600;">Recurso em Desenvolvimento</h3>
+                    <p style="margin: 0; color: #92400E; font-size: 14px;">As notificações globais ainda não foram implementadas no backend. Este recurso será adicionado em breve.</p>
+                </div>
+            </div>
+        </div>
 
         <div class="card table-wrapper">
             <table>
@@ -129,8 +140,8 @@
 
         async function loadAllEmpresas() {
             try {
-                const response = await window.api.call('GET', 'admin/empresas');
-                allEmpresas = response.empresas || [];
+                const response = await fetchApi('/admin/empresas');
+                allEmpresas = response || [];
                 const select = document.getElementById('alvoEmpresaId');
                 select.innerHTML = '';
                 allEmpresas.forEach(empresa => {
@@ -138,15 +149,17 @@
                 });
             } catch (error) {
                 console.error("Erro ao carregar empresas:", error);
+                showToast('Erro ao carregar empresas', 'error');
             }
         }
 
         async function loadNotifications() {
             const tableBody = document.getElementById('notificationsTableBody');
-            tableBody.innerHTML = '<tr><td colspan="6">Carregando...</td></tr>';
             try {
-                const notificacoes = await window.api.call('GET', 'notificacoes-globais/admin');
-                tableBody.innerHTML = '';
+                // TODO: Endpoint /notificacoes-globais/admin não está implementado no backend
+                // Usando array vazio por enquanto
+                const notificacoes = [];
+                tableBody.innerHTML = '<tr><td colspan="6" style="text-align: center; padding: 40px; color: #999;"><i class="fas fa-info-circle" style="margin-right: 8px;"></i> Este recurso será implementado em breve</td></tr>';
                 notificacoes.forEach(n => {
                     const row = tableBody.insertRow();
                     const direcionamento = n.direcionamento || {};
@@ -230,10 +243,10 @@
             };
 
             try {
-                await window.api.call('POST', 'notificacoes-globais/admin', data);
-                showToast('Notificação salva com sucesso!', 'success');
+                // TODO: Endpoint /notificacoes-globais/admin não está implementado no backend
+                // Mostrar mensagem de indisponível
+                showToast('⚠️ Recurso de notificações globais não está disponível no momento', 'warning');
                 closeModal('notificationModal');
-                loadNotifications();
             } catch (error) {
                 showToast(error.message || 'Erro ao salvar notificação.', 'error');
             }
