--- a/DESKTOPV2/signup.html
+++ b/DESKTOPV2/signup.html
@@ -828,16 +828,19 @@
                     this.isLoading = true;
 
                     try {
-                        await window.api.signup({
-                            nome: this.nome.trim(),
-                            email: this.email.trim(),
-                            senha: this.senha
+                        await fetchApi('/usuarios', {
+                            method: 'POST',
+                            body: JSON.stringify({
+                                nome: this.nome.trim(),
+                                email: this.email.trim(),
+                                senha: this.senha
+                            })
                         });
 
-                        showToast('✨ Conta criada com sucesso! Redirecionando...', 'success');
+                        showToast('✨ Conta criada com sucesso! Escolha seu plano...', 'success');
 
                         setTimeout(() => {
-                            window.location.href = 'login.html';
+                            window.location.href = 'planos.html';
                         }, 1500);
 
                     } catch (error) {
