feat: Implementação do plano gratuito com dias de trial configuráveis
- Adicionado campo `trialDays` ao modelo `SubscriptionPlan` no banco de dados.
- Atualizado serviço de assinatura para calcular dinamicamente o período de trial.
- Criado endpoint para criar assinatura FREE automaticamente para novos usuários.
- Modificações na interface do usuário para refletir o novo plano gratuito e suas funcionalidades.
- Implementado modal de boas-vindas para novos usuários com plano FREE.
- Criado script para corrigir assinaturas FREE para usuários sem assinatura.
- Adicionadas novas migrações para suportar as alterações no banco de dados.

--- a/DESKTOPV2/configuracoes.html
+++ b/DESKTOPV2/configuracoes.html
@@ -15,6 +15,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <!-- Alpine.js -->
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+<link rel="stylesheet" href="webapp-mobile.css">
+<link rel="stylesheet" href="fix-responsive.css">
 </head>
 <body id="config-page" data-permission="gerenciar_configuracoes">
     <!-- Navigation Menu -->
@@ -2199,6 +2201,30 @@
         }
     </script>
     <script src="nav-menu-helper.js"></script>
+<script src="mobile-nav.js"></script>
+<script src="webapp-bottom-nav.js"></script>
+<nav class="bottom-navigation">
+    <a href="index.html" class="bottom-nav-item" data-page="home" title="Dashboard">
+        <i class="fas fa-home"></i>
+        <span>Início</span>
+    </a>
+    <a href="ordens.html" class="bottom-nav-item" data-page="ordens" title="Minhas Ordens">
+        <i class="fas fa-list-check"></i>
+        <span>Ordens</span>
+    </a>
+    <a href="novaordem.html" class="bottom-nav-item" data-page="novaordem" title="Nova Ordem">
+        <i class="fas fa-plus-circle"></i>
+        <span>Nova</span>
+    </a>
+    <a href="clientes.html" class="bottom-nav-item" data-page="clientes" title="Clientes">
+        <i class="fas fa-users"></i>
+        <span>Clientes</span>
+    </a>
+    <a href="#" class="bottom-nav-item" data-page="menu" onclick="toggleMobileMenu(event)" title="Menu">
+        <i class="fas fa-bars"></i>
+        <span>Menu</span>
+    </a>
+</nav>
 </body>
 </html>
 
