--- a/DESKTOPV2/index.html
+++ b/DESKTOPV2/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LinaX - Dashboard</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="webapp-mobile.css">
+    <link rel="stylesheet" href="fix-responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -699,6 +701,34 @@
 
             <!-- Navigation Menu -->
             <nav class="nav-menu-card">
+                <!-- Quick Access Section -->
+                <div class="nav-menu-quick-access">
+                    <a href="index.html" class="quick-access-btn" title="Dashboard">
+                        <i class="fas fa-chart-line"></i>
+                        <span>Dashboard</span>
+                    </a>
+                    <a href="ordens.html" class="quick-access-btn" title="Ordens">
+                        <i class="fas fa-list-check"></i>
+                        <span>Ordens</span>
+                    </a>
+                    <a href="clientes.html" class="quick-access-btn" title="Clientes">
+                        <i class="fas fa-users"></i>
+                        <span>Clientes</span>
+                    </a>
+                    <a href="financeiro.html" class="quick-access-btn" title="Financeiro">
+                        <i class="fas fa-chart-pie"></i>
+                        <span>Financeiro</span>
+                    </a>
+                    <a href="configuracoes.html" class="quick-access-btn" title="Configurações">
+                        <i class="fas fa-cog"></i>
+                        <span>Config</span>
+                    </a>
+                    <a href="perfil.html" class="quick-access-btn" title="Meu Perfil">
+                        <i class="fas fa-user-circle"></i>
+                        <span>Perfil</span>
+                    </a>
+                </div>
+
                 <div class="nav-menu-links">
                     <a href="index.html" class="nav-menu-item active" data-permission="ver_dashboard">
                         <i class="fas fa-home"></i>
@@ -1849,6 +1879,31 @@
         });
     </script>
     <script src="nav-menu-helper.js"></script>
+    <script src="mobile-nav.js"></script>
+    <script src="webapp-bottom-nav.js"></script>
+
+    <nav class="bottom-navigation">
+        <a href="index.html" class="bottom-nav-item active" data-page="home" title="Dashboard">
+            <i class="fas fa-home"></i>
+            <span>Início</span>
+        </a>
+        <a href="ordens.html" class="bottom-nav-item" data-page="ordens" title="Minhas Ordens">
+            <i class="fas fa-list-check"></i>
+            <span>Ordens</span>
+        </a>
+        <a href="novaordem.html" class="bottom-nav-item" data-page="novaordem" title="Nova Ordem">
+            <i class="fas fa-plus-circle"></i>
+            <span>Nova</span>
+        </a>
+        <a href="clientes.html" class="bottom-nav-item" data-page="clientes" title="Clientes">
+            <i class="fas fa-users"></i>
+            <span>Clientes</span>
+        </a>
+        <a href="#" class="bottom-nav-item" data-page="menu" onclick="toggleMobileMenu(event)" title="Menu">
+            <i class="fas fa-bars"></i>
+            <span>Menu</span>
+        </a>
+    </nav>
 </body>
 </html>
 
