--- a/DESKTOPV2/perfil.html
+++ b/DESKTOPV2/perfil.html
@@ -207,6 +207,8 @@
             }
         }
     </style>
+<link rel="stylesheet" href="webapp-mobile.css">
+<link rel="stylesheet" href="fix-responsive.css">
 </head>
 <body x-data="profileApp()" x-init="init()" x-cloak>
     <main class="main-content">
@@ -698,5 +700,29 @@
             };
         }
     </script>
+<script src="mobile-nav.js"></script>
+<script src="webapp-bottom-nav.js"></script>
+<nav class="bottom-navigation">
+    <a href="index.html" class="bottom-nav-item" data-page="home" title="Dashboard">
+        <i class="fas fa-home"></i>
+        <span>Início</span>
+    </a>
+    <a href="ordens.html" class="bottom-nav-item" data-page="ordens" title="Minhas Ordens">
+        <i class="fas fa-list-check"></i>
+        <span>Ordens</span>
+    </a>
+    <a href="novaordem.html" class="bottom-nav-item" data-page="novaordem" title="Nova Ordem">
+        <i class="fas fa-plus-circle"></i>
+        <span>Nova</span>
+    </a>
+    <a href="clientes.html" class="bottom-nav-item" data-page="clientes" title="Clientes">
+        <i class="fas fa-users"></i>
+        <span>Clientes</span>
+    </a>
+    <a href="#" class="bottom-nav-item" data-page="menu" onclick="toggleMobileMenu(event)" title="Menu">
+        <i class="fas fa-bars"></i>
+        <span>Menu</span>
+    </a>
+</nav>
 </body>
 </html>
